--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.81.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
